Directly convert BattleTech MTP to PNG with a custom palette for easy viewing

--- a/BattleTech/Hacks/Makefile
+++ b/BattleTech/Hacks/Makefile
@@ -1,11 +1,11 @@
-all: rawdump mtp2raw images
+all: rawdump mtp2png images
 
 rawdump: rawdump.cpp
 
-mtp2raw: mtp2raw.cpp
+mtp2png: mtp2png.cpp
 
-images: mtp2raw
-	./mtp2gif.sh ../MAP1.MTP out-map1.gif
-	./mtp2gif.sh ../MAP2.MTP out-map2.gif
-	./mtp2gif.sh ../MAP11.MTP out-map11.gif
-	./mtp2gif.sh ../MAP14.MTP out-map14.gif
+images: mtp2png
+	./mtp2png ../MAP1.MTP out-map1.png
+	./mtp2png ../MAP2.MTP out-map2.png
+	./mtp2png ../MAP11.MTP out-map11.png
+	./mtp2png ../MAP14.MTP out-map14.png
