Tool to convert from dosbox-debug MEMDUMPBIN 1M output files into tiled PNG images, add simulator, Makefile enhancements

--- a/BattleTech/Hacks/Makefile
+++ b/BattleTech/Hacks/Makefile
@@ -1,21 +1,28 @@
-all: rawdump mtp2png images addmoney
+TARGETS = rawdump mtp2png addmoney memdumpbin2png memdumpbinsim
+TARGETS += $(shell ls -1 ../*.MTP | sed "s/\.MTP/\.png/g" | sed "s~../~~g" | grep -v MAP12 | grep -v MAP13 | grep -v MAP15)
+TARGETS += $(shell ls -1 memdumpbin-*.bin | sed "s/\.bin/\.png/g")
+TARGETS += memdumpbin-sim.png
+
+all: $(TARGETS)
 
 rawdump: rawdump.cpp
 
 mtp2png: mtp2png.cpp
 
+memdumpbin2png: memdumpbin2png.cpp
+
 addmoney: addmoney.cpp
 
-images: mtp2png
-	./mtp2png ../MAP1.MTP out-map1.png
-	./mtp2png ../MAP2.MTP out-map2.png
-	./mtp2png ../MAP11.MTP out-map11.png
-	./mtp2png ../MAP14.MTP out-map14.png
-	./mtp2png ../MAP3.MTP out-map3.png
-	./mtp2png ../MAP4.MTP out-map4.png
-	./mtp2png ../MAP5.MTP out-map5.png
-	./mtp2png ../MAP6.MTP out-map6.png
-	./mtp2png ../MAP7.MTP out-map7.png
-	./mtp2png ../MAP8.MTP out-map8.png
-	./mtp2png ../MAP9.MTP out-map9.png
-	./mtp2png ../MAP10.MTP out-map10.png
+%.png: ../%.MTP
+	./mtp2png $< $@
+
+memdumpbin-%.png: memdumpbin-%.bin memdumpbin2png
+	./memdumpbin2png $< $@
+
+memdumpbinsim: memdumpbinsim.cpp
+
+memdumpbin-sim.bin: memdumpbinsim
+	./memdumpbinsim > memdumpbin-sim.bin
+
+clean:
+	rm -rf $(TARGETS)
