Tool to decode just the framebuffer from A000:0000 and generate a PNG

--- a/BattleTech/Hacks/Makefile
+++ b/BattleTech/Hacks/Makefile
@@ -1,8 +1,10 @@
-TARGETS = rawdump mtp2png addmoney memdumpbin2png memdumpbinsim vga_palette.h btech_palette.h svg_palette.svg
+
+TARGETS += rawdump mtp2png addmoney memdumpbin2png memdumpbinsim framebuffer2png
+TARGETS += vga_palette.h btech_palette.h svg_palette.svg
 TARGETS += $(shell ls -1 ../*.MTP | sed "s/\.MTP/\.png/g" | sed "s~../~~g" | grep -v MAP12 | grep -v MAP13 | grep -v MAP15)
 TARGETS += memdumpbin-sim16.png memdumpbin-sim256.png memdumpbin-sim0.png
 TARGETS += svg_palette.svg
-TARGETS += $(shell if [ -f MEMDUMP.BIN ]; then echo "MEMDUMP.BIN.png"; fi)
+TARGETS += $(shell if [ -f MEMDUMP.BIN ]; then echo "MEMDUMP.BIN.fb.png MEMDUMP.BIN.full.png"; fi)
 
 all: $(TARGETS)
 
@@ -21,6 +23,8 @@ svg_palette.svg: svgpalette.sh
 
 memdumpbin2png: memdumpbin2png.cpp vga_palette.h btech_palette.h
 
+framebuffer2png: framebuffer2png.cpp vga_palette.h btech_palette.h
+
 addmoney: addmoney.cpp
 
 %.png: ../%.MTP mtp2png
@@ -29,8 +33,11 @@ addmoney: addmoney.cpp
 memdumpbin-%.png: memdumpbin-%.bin memdumpbin2png
 	./memdumpbin2png $< $@
 
-MEMDUMP.BIN.png: memdumpbin2png
-	./memdumpbin2png MEMDUMP.BIN MEMDUMP.BIN.png
+MEMDUMP.BIN.full.png: memdumpbin2png
+	./memdumpbin2png MEMDUMP.BIN MEMDUMP.BIN.full.png
+
+MEMDUMP.BIN.fb.png: framebuffer2png
+	./framebuffer2png MEMDUMP.BIN MEMDUMP.BIN.fb.png
 
 memdumpbinsim: memdumpbinsim.cpp
 
