Restore back to the VGA palette since there is some weird palette mapping going on. Color index F0 maps to 0F, 70 to 07, 80 to 08, etc when looking at the screenshots.

--- a/BattleTech/Hacks/Makefile
+++ b/BattleTech/Hacks/Makefile
@@ -33,10 +33,10 @@ addmoney: addmoney.cpp
 memdumpbin-%.png: memdumpbin-%.bin memdumpbin2png
 	./memdumpbin2png $< $@
 
-MEMDUMP.BIN.full.png: memdumpbin2png
+MEMDUMP.BIN.full.png: memdumpbin2png MEMDUMP.BIN
 	./memdumpbin2png MEMDUMP.BIN MEMDUMP.BIN.full.png
 
-MEMDUMP.BIN.fb.png: framebuffer2png
+MEMDUMP.BIN.fb.png: framebuffer2png MEMDUMP.BIN
 	./framebuffer2png MEMDUMP.BIN MEMDUMP.BIN.fb.png
 
 memdumpbinsim: memdumpbinsim.cpp
